# CKKSBladderCancerPredictor

./: CMakeLists.txt  README.md
src/: client.cpp  client.h  helper.h  main.cpp  matrix.h  server.cpp  server.h  utils.cpp  utils.h
